hard code background-color instead of $ var ref

--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -1,7 +1,7 @@
 // @import "./color_schemes/dark";
 
 $color-scheme: cosm;
-$body-background-color: $grey-dk-300;
+$body-background-color: #252525;
 $body-heading-color: $grey-lt-000;
 $body-text-color: $grey-lt-300;
 $link-color: $blue-000;
