--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -3,10 +3,10 @@
 $color-scheme: cosm;
 $body-background-color: #252525;
 $body-heading-color: $grey-lt-000;
-$body-text-color: $grey-lt-300;
-$link-color: $blue-000;
+$body-text-color: #bdbdbd;
+$link-color: #5299c2;
 $nav-child-link-color: $grey-dk-000;
-$sidebar-color: $grey-dk-300;
+$sidebar-color: #252525;
 $base-button-color: $grey-dk-250;
 $btn-primary-color: $blue-200;
 $code-background-color: #31343f; // OneDarkJekyll default for syntax-one-dark-vivid
@@ -62,7 +62,7 @@ $purple-000: #7253ed !default;
 $purple-100: #5e41d0 !default;
 $purple-200: #4e26af !default;
 $purple-300: #381885 !default;
-$blue-000: #2c84fa !default;
+$blue-000: #5299c2 !default;
 $blue-100: #2869e6 !default;
 $blue-200: #264caf !default;
 $blue-300: #183385 !default;
