--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -20,11 +20,16 @@ $border-color: $grey-dk-200;
 @import "./vendor/OneDarkJekyll/syntax"; // this is the one-dark-vivid atom syntax theme
 
 // Typography
+@font-face {
+	font-family: "AlegreyaSC";
+	src: url("../assets/fonts/AlegreyaSC-Regular.ttf");
+}
 
 // prettier-ignore
-$body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
-  roboto, "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji" !default;
-$mono-font-family: "SFMono-Regular", menlo, consolas, monospace !default;
+// $body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
+//   roboto, "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji" !default;
+$body-font-family: "AlegreyaSC", sans-serif !default;
+$mono-font-family: "AlegreyaSC", sans-serif !default;
 $root-font-size: 16px !default; // DEPRECATED: previously base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
