--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -21,15 +21,15 @@ $border-color: $grey-dk-200;
 
 // Typography
 @font-face {
-	font-family: "AlegreyaSC";
+	font-family: "AlegreyaSC-Regular";
 	src: url("../assets/fonts/AlegreyaSC-Regular.ttf");
 }
 
 // prettier-ignore
 // $body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
 //   roboto, "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji" !default;
-$body-font-family: "AlegreyaSC", sans-serif !default;
-$mono-font-family: "AlegreyaSC", sans-serif !default;
+$body-font-family: "AlegreyaSC-Regular";
+$mono-font-family: "AlegreyaSC-Regular";
 $root-font-size: 16px !default; // DEPRECATED: previously base font-size for rems
 $body-line-height: 1.4 !default;
 $content-line-height: 1.6 !default;
