--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -30,26 +30,26 @@ $border-color: $grey-dk-200;
 //   roboto, "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji" !default;
 $body-font-family: "AlegreyaSC-Regular";
 $mono-font-family: "AlegreyaSC-Regular";
-$root-font-size: 16px !default; // DEPRECATED: previously base font-size for rems
-$body-line-height: 1.4 !default;
-$content-line-height: 1.6 !default;
-$body-heading-line-height: 1.25 !default;
+$root-font-size: 16px; // !default; // DEPRECATED: previously base font-size for rems
+$body-line-height: 1.4; //  !default;
+$content-line-height: 1.6; //  !default;
+$body-heading-line-height: 1.25; //  !default;
 
 // Font size
 // `-sm` suffix is the size at the small (and above) media query
 
-$font-size-1: 0.5625rem !default;
-$font-size-1-sm: 0.625rem !default;
-$font-size-2: 0.6875rem !default; // h4 - uppercased!, h6 not uppercased, text-small
-$font-size-3: 0.75rem !default; // h5
-$font-size-4: 0.875rem !default;
-$font-size-5: 1rem !default; // h3
-$font-size-6: 1.125rem !default; // h2
-$font-size-7: 1.5rem !default;
-$font-size-8: 2rem !default; // h1
-$font-size-9: 2.25rem !default;
-$font-size-10: 2.625rem !default;
-$font-size-10-sm: 3rem !default;
+$font-size-1: 0.5625rem; //  !default;
+$font-size-1-sm: 0.625rem; //  !default;
+$font-size-2: 0.6875rem; //  !default; // h4 - uppercased!, h6 not uppercased, text-small
+$font-size-3: 0.75rem; //  !default; // h5
+$font-size-4: 0.875rem; //  !default;
+$font-size-5: 1rem; //  !default; // h3
+$font-size-6: 1.125rem; //  !default; // h2
+$font-size-7: 1.5rem; //  !default;
+$font-size-8: 2rem; //  !default; // h1
+$font-size-9: 2.25rem; //  !default;
+$font-size-10: 2.625rem; //  !default;
+$font-size-10-sm: 3rem; // !default;
 
 // Colors
 
