--- a/_sass/color_schemes/cosm.scss
+++ b/_sass/color_schemes/cosm.scss
@@ -28,8 +28,8 @@ $border-color: $grey-dk-200;
 // prettier-ignore
 // $body-font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
 //   roboto, "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji" !default;
-$body-font-family: "VTGoblinHand";
-$mono-font-family: "VTGoblinHand";
+$body-font-family: "VTGoblinHand", sans-serif;
+$mono-font-family: "VTGoblinHand", sans-serif;
 $root-font-size: 16px; // !default; // DEPRECATED: previously base font-size for rems
 $body-line-height: 1.4; //  !default;
 $content-line-height: 1.6; //  !default;
